# f1fm

./: .gitignore  Cargo.toml  README.md
book/: book.toml
book/src/: SUMMARY.md  app-reference.md  format.md  index.md  install.md  setup.md
src/: FantasySeason.rs  api.rs  error.rs  fantasy_season.rs  main.rs  utils.rs  vc.rs
src/fantasy_season/: draft.rs  drafter.rs  error.rs  race_results.rs  score.rs  scorer.rs  status.rs  team.rs
src/vc/: api.rs  builder.rs  landing.rs  season.rs  style.rs
src/vc/season/: draft_window.rs  popup.rs
src/vc/season/draft_window/: replace_all.rs  roll_on.rs
src/vc/season/popup/: replace_all_drafter.rs  roll_on_drafter.rs
