[package]
name = "f1fm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12", features = ["json"] }
ergast-rs = "0.3.2"
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
time = {version = "0.3"}
directories-next = "2.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
postcard = { version = "1.1.1", features = ["use-std"] }
